--- a/styles/login.css
+++ b/styles/login.css
@@ -86,60 +86,6 @@ h1{
     font-weight: 300;
 }
 
-.mainText{
-    margin-top: 75px;
-    text-align: center;
-    font-size: 48px;
-    font-weight: bold;
-    color: white;
-    align-items: center;
-margin: 75px auto;
-width: 900px;
-height: 120px;
-}
-.additionalText{
-    font-size: 24px;
-    color: #828282;
-    font-weight: bold;
-    text-align: center;
-    height: 30px;
-}
-
-.containerItems{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 20% 0 20%;
-    margin-top: 100px;
-}
-
-
-
-.item{
-    background-color: #1A1A1A;
-    width: 128px;
-    height: 128px;
-    border-radius: 15px;
-    align-items: center;
-    text-align: center;
-    
-}
-
-.item h3{
-color: #828282;
-text-align: center;
-margin: 0;
-padding: 0;
-font-size: 20px;
-font-weight: bold;
-}
-
-.item p{
-    margin: 0;
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 0;
-}
 
 
 
@@ -193,4 +139,72 @@ font-weight: bold;
 
 main{
     flex-grow: 1;
+}
+
+
+.main{
+    /* justify-content: center;
+    display: flex;
+    align-items: center; */
+    text-align: center;
+    margin-top: 200px;
+  
+}
+
+form{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+input{
+    width: 500px;
+    height: 80px;
+    background-color: #0D0D0D;
+    border-radius: 10px;
+    font-size: 32px;
+    color: #828282;
+    border:  1px solid #B5B5B5 ;
+}
+
+label{
+    font-size: 24px;
+    color: white;
+    font-weight: 300;
+}
+.input_container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button_login{
+    width: 500px;
+    height: 80px;
+    text-align: center;
+    color: black;
+    font-size: 36px;
+    font-weight: 300px  ;
+    border-radius: 15px;
+    background-color: #FF9332   ;
+    margin-top: 50px;
+}
+
+.button_google{
+text-align: left;
+font-size: 36px;
+font-weight: 300;
+border: 1px solid #8A8A8A;
+    width: 500px;
+    height: 100px;
+    background-color: #262626;
+    border-radius: 15px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
