--- a/styles/cryptolist.css
+++ b/styles/cryptolist.css
@@ -237,4 +237,17 @@ min-height: 480px;
 margin-top: 100px;
     }
 
-    .button_more
+    .button_more{
+        background-color: #FF9332;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        margin: 50px auto;
+        border-radius: 15px;
+        border: none;
+        width: 300px;
+        height: 80px;
+        font-size: 40px;
+        font-weight: 400;
+    }
