--- a/styles/profile.css
+++ b/styles/profile.css
@@ -17,9 +17,7 @@ a, a:visited {
     cursor: pointer;
     color: white;
 }
-button{
-    cursor: pointer;
-}
+
 
 #search{
     background-color: #0D0D0D;
@@ -108,29 +106,27 @@ height: 120px;
 }
 
 .containerItems{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 20% 0 20%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 0 auto;
     margin-top: 100px;
+    margin: 100px 30% 0 30%;
 }
 
 
 
 .item{
-    background-color: #1A1A1A;
-    width: 128px;
-    height: 128px;
-    border-radius: 15px;
     align-items: center;
     text-align: center;
     
 }
 
 .item h3{
-color: #828282;
+    padding-top: 30px;
+color: white;
 text-align: center;
 margin: 0;
-padding: 0;
+/* padding: 0; */
 font-size: 20px;
 font-weight: bold;
 }
@@ -145,7 +141,7 @@ font-weight: bold;
 
 
 
-.Go{
+.logout{
     background-color: #FF9332;
     display: flex;
     align-items: center;
@@ -154,9 +150,9 @@ font-weight: bold;
     margin: 50px auto;
     border-radius: 15px;
     border: none;
-    width: 300px;
-    height: 80px;
-    font-size: 40px;
+    width: 200px;
+    height: 50px;
+    font-size: 32px;
     font-weight: 400;
 }
 
@@ -195,4 +191,20 @@ font-weight: bold;
 
 main{
     flex-grow: 1;
+}
+
+
+.operations{
+    text-align: center;
+    color: white;
+} 
+
+.operations h2{
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.operations hr{
+    width: 600px;
+    border: 1px solid #3D3B3B;
 }
