--- a/styles/trade.css
+++ b/styles/trade.css
@@ -259,5 +259,6 @@ margin-top: 100px;
         height: 80px;
         font-size: 40px;
         font-weight: 400;
+        cursor: pointer;
     }
  
